# Multi_Tool

./: CMakeLists.txt  CMakeLists.txt.user.2ac62f6  LICENSE  README.md  WORK.txt  calc.cpp  calc.h  calc.ui  calcEquLogic.cpp  equation.cpp  equation.h  hihi.txt  main.cpp  mainwindow.cpp  mainwindow.h  note.cpp  note.h  notebook.cpp  notebook.h  notebook.ui  notes.xml  notetaker.cpp  opennote.cpp  opennote.h  programs.cpp  programs.h  savepopup.cpp  savepopup.h  savepopup.ui  test.txt  wahoo.txt
header_files/: calc.h  dataCard.h  mainwindow.h  note.h  noteSelector.h  notebook.h  notetaker.h  savepopup.h
header_files/calc/: calc.h  equation.h
header_files/notebook/: dataCard.h  noteSelector.h  notebook.h
pugiXML/: pugixml.cpp  pugixml.hpp
source_files/: calc.cpp  calc.ui  dataCard.cpp  equation.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  note.cpp  noteSelector.cpp  notebook.cpp  notetaker.cpp  opennote.cpp  opennote.ui  programs.ui  savepopup.cpp
source_files/calc/: calc.cpp  equation.cpp
source_files/notebook/: dataCard.cpp  noteSelector.cpp  notebook.cpp  savepopup.cpp
